--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
-<body style='margin: 0px; overflow: hidden;'>
-	<a-scene embedded arjs='sourceType: webcam;'>
-		<!-- Plane with video texture -->
-		<a-plane position='0 0.5 0' rotation="270 0 0 " width="2" height="1.5">
-			<!-- Use the provided video URL -->
-			<a-video src="https://lukewelsh.github.io/PHMA/tunicates.mp4" autoplay="true" loop="false" muted="false" position="0 0 0" width="2" height="1.5"></a-video>
-		</a-plane>
-
-		<!-- AR Marker Camera -->
-		<a-marker-camera preset='hiro'></a-marker-camera>
-	</a-scene>
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/dist/mindar-image.prod.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  </head>
+  <body>
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+    </a-scene>
+  </body>
+</html>
