--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindAR Debug Test</title>
+  <title>MindAR Test</title>
+  
+  <!-- Required Scripts -->
   <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/dist/mindar-image.prod.js"></script>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 </head>
 <body>
-  <h1>MindAR Debugging</h1>
-  <p>If you see this, the page loaded. Check the console for errors if the AR view is still blank.</p>
-
-  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <h1>MindAR Test Page</h1>
+  <p>If this works, you'll see AR functionality.</p>
+  
+  <!-- A-Frame Scene with MindAR -->
+  <a-scene 
+    mindar-image="imageTargetSrc: https://lukewelsh.github.io/PHMA/targets.mind;" 
+    vr-mode-ui="enabled: false" 
+    device-orientation-permission-ui="enabled: false">
+    
+    <!-- Camera Setup -->
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    
+    <!-- AR Target -->
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-plane color="blue" opacity="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      <a-plane color="red" opacity="0.5" position="0 0 0" height="0.5" width="0.5"></a-plane>
     </a-entity>
   </a-scene>
 </body>
