--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: url('ocean.jpg') no-repeat center center fixed;
-            background-size: cover;
+            font-family: 'Cormorant Garamond', Georgia, serif;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            font-family: 'Cormorant Garamond', Georgia, serif;
+            position: relative;
+        }
+        /* Video background */
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1; /* Keeps video behind content */
         }
         .container {
             position: relative;
             width: 90%;
             max-width: 600px;
             text-align: center;
+            z-index: 1; /* Ensures buttons and content are in front */
         }
         .species-image {
             width: 100%;
@@ -71,6 +81,12 @@
     </style>
 </head>
 <body>
+    <!-- Ocean video background -->
+    <video autoplay muted loop>
+        <source src="ocean.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <div class="container">
         <img src="species_placeholder.png" alt="Brine Shrimp" class="species-image">
         <button class="button" onclick="showInfo('Introduction')">Introduction</button>
