--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </video>
 
     <div class="container">
-        <img src="species_placeholder.png" alt="Brine Shrimp" class="species-image">
+        <img src="artemia_salina.png" alt="Brine Shrimp" class="species-image">
         <button class="button" onclick="showInfo('Introduction')">Introduction</button>
         <button class="button" onclick="showInfo('Habitat & Range')">Habitat & Range</button>
         <button class="button" onclick="showInfo('Lifespan & Growth')">Lifespan & Growth</button>
